--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>StoreCheckFront</title>
@@ -8,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/450aa5b2d6.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
 </head>
 <body>
 
