--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/450aa5b2d6.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
+  <script src="https://unpkg.com/exifr@2.1.3/index.js"></script>
+  <script src="./node_modules/exifr/dist/lite.umd.js"></script>
 </head>
 <body>
 
